--- a/home.html
+++ b/home.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Pekar Industrial and Construction LTD</title>
 </head>
-<body background="img1.jpg">
+<body background="img5.jpg">
+    <nav>
     
+        <a href="./">HOME</a>
+        <a href="">JOB CARDS</a>
+        <a href="">DELIVERY NOTES</a>
+        <a href="">INVOICES</a>
+        <div class="search-container">
+            <input type="text" placeholder="Search..." id="search">
+            <button type="submit">🔍</button>
+        </div>
+    </nav>
+    <div class="content">
+        <img src="image.png" width="1255" height="200" class="d-inline-block align-top" alt="Logo">
+        
+    </div>
 </body>
 </html>
