--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <title>Pekar Industrial and Construction LTD</title>
 </head>
 <body background="img5.jpg">
@@ -19,9 +19,38 @@
             <button type="submit">🔍</button>
         </div>
     </nav>
-    <div class="content">
+
+    <div class="cont">
         <img src="image.png" width="1255" height="200" class="d-inline-block align-top" alt="Logo">
-        
+        <h2>Plumbing works, Mechanical & Electrical plant installations, HVAC,<br> Infra-Red thermography and other maintainance solutions <br> and General Contractors</h2>
     </div>
+
+    <div class="container">
+        <div class="box">Box 1</div>
+        <div class="box">Box 2</div>
+        <div class="box">Box 3</div>
+    </div>
+    <footer>
+        <div class="footer-container">
+            <!-- Section 1 -->
+            <div class="footer-section">
+                <h3>Pekar industrial & construction LTD</h3>
+                <ul>
+                    <li><h4>Location: Kasarani Mwiki Road</h4></li>
+                    <li><h4>P.O Box 4384-00200 City Square Nairobi</h4></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>contact info</h3>
+                <ul>
+                    <li><h4>Email: pekar.industrial@gmail.com</h4></li>
+                    <li><h4>Cell Phone: 0721301274/0722301274</h4></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                © 2025 Your Company | All rights reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
