--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     
     <title>Pekar Industrial and Construction LTD</title>
 </head>
-<body background="img5.jpg">
+<body background="images/img5.jpg">
     <nav>
     
         <a href="./">HOME</a>
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="cont">
-        <img src="image.png" width="1255" height="200" class="d-inline-block align-top" alt="Logo">
+        <img src="images/image.png" width="1255" height="200" class="d-inline-block align-top" alt="Logo">
         <h2>Plumbing works, Mechanical & Electrical plant installations, HVAC,<br> Infra-Red thermography and other maintainance solutions <br> and General Contractors</h2>
     </div>
 
