--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
     <nav>
     
         <a href="./">HOME</a>
-        <a href="">JOB CARDS</a>
-        <a href="">DELIVERY NOTES</a>
-        <a href="">INVOICES</a>
+        <a href="viewcard.html">JOB CARDS</a>
+        <a href="viewnote.html">DELIVERY NOTES</a>
+        <a href="viewinvoice.html">INVOICES</a>
         <div class="search-container">
             <input type="text" placeholder="Search..." id="search">
             <button type="submit">🔍</button>
@@ -21,14 +21,23 @@
     </nav>
 
     <div class="cont">
-        <img src="images/image.png" width="1255" height="200" class="d-inline-block align-top" alt="Logo">
+        <img src="images/image.png" width="1255" height="150" class="d-inline-block align-top" alt="Logo">
         <h2>Plumbing works, Mechanical & Electrical plant installations, HVAC,<br> Infra-Red thermography and other maintainance solutions <br> and General Contractors</h2>
     </div>
 
     <div class="container">
-        <div class="box">Box 1</div>
-        <div class="box">Box 2</div>
-        <div class="box">Box 3</div>
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
+            <p><strong>JOB CARDS:</strong> Keep track of work progress, assigned tasks, and project timelines efficiently.</p>
+            <a href="createcard.html" class="button"  style="font-weight: bolder;">+ Create</a>
+        </div>
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
+            <p><strong>DELIVERY NOTES:</strong> Document all goods delivered to clients with accurate details and timestamps.</p>
+            <a href="createnote.html" class="button" style="font-weight: bolder;">+ Create</a>
+        </div>
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
+            <p><strong>INVOICES:</strong> Generate detailed invoices with itemized billing and payment tracking.</p>
+            <a href="createinvoice.html" class="button"  style="font-weight: bolder;">+ Create </a>
+        </div>
     </div>
     <footer>
         <div class="footer-container">
