--- a/home.html
+++ b/home.html
@@ -26,15 +26,15 @@
     </div>
 
     <div class="container">
-        <div class="box" style="background-image: url('images/img13.Vector');">
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>JOB CARDS:</strong> Keep track of work progress, assigned tasks, and project timelines efficiently.</p>
             <a href="createcard.html" class="button"  style="font-weight: bolder;">+ Create</a>
         </div>
-        <div class="box" style="background-image: url('images/img13.Vector');">
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>DELIVERY NOTES:</strong> Document all goods delivered to clients with accurate details and timestamps.</p>
             <a href="createnote.html" class="button" style="font-weight: bolder;">+ Create</a>
         </div>
-        <div class="box" style="background-image: url('images/img13.Vector');">
+        <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>INVOICES:</strong> Generate detailed invoices with itemized billing and payment tracking.</p>
             <a href="createinvoice.html" class="button"  style="font-weight: bolder;">+ Create </a>
         </div>
