--- a/createinvoice.html
+++ b/createinvoice.html
@@ -6,6 +6,27 @@
     <title>Create Invoice</title>
     <link rel="stylesheet" href="css.css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script>
+        function generateInvoiceNo() {
+            let lastInvoiceNo = localStorage.getItem('lastInvoiceNo');
+            if (!lastInvoiceNo) {
+                lastInvoiceNo = 0;
+            }
+            const newInvoiceNo = parseInt(lastInvoiceNo) + 1;
+            localStorage.setItem('lastInvoiceNo', newInvoiceNo);
+            return `INV-${newInvoiceNo}`;
+        }
+
+        function resetInvoiceNo() {
+            localStorage.removeItem('lastInvoiceNo');
+            alert("Invoice number has been reset.");
+            document.getElementById('invoiceNo').value = generateInvoiceNo(); // Update the invoice number after reset
+        }
+
+        window.onload = function() {
+            document.getElementById('invoiceNo').value = generateInvoiceNo(); // Set the invoice number when the page loads
+        }
+    </script>
 </head>
 <body background="images/img5.jpg">
     <nav>
@@ -22,12 +43,12 @@
         <img src="images/image.png" width="1255" height="150" class="d-inline-block align-top" alt="Logo">
     </div>
     <form id="invoiceForm" style="background-color: white; width: 60%; padding: 20px;">
-        <h2>INVOICE</h2>
-        <label for="name">NAME:</label>
-        <input type="text" id="name" required><br><br>
-
+        <h2 style="text-align: center;">INVOICE</h2>
         <label for="invoiceNo">INVOICE NO:</label>
         <input type="text" id="invoiceNo" required><br><br>
+
+        <label for="name">NAME:</label>
+        <input type="text" id="name" required><br><br>
 
         <label for="address">ADDRESS:</label>
         <input type="text" id="address" required><br><br>
@@ -63,6 +84,8 @@
         <button type="button" onclick="addItem()">Add Item</button><br><br>
 
         <button type="button" onclick="generatePDF()">Download as PDF</button>
+
+        <button type="button" onclick="resetInvoiceNo()">Reset Invoice Number</button>
     </form>
     <script>
         let itemCount = 1;
