--- a/createcard.html
+++ b/createcard.html
@@ -293,8 +293,11 @@
     doc.setFont("helvetica", "bold");
     doc.text("Installation, testing, and commissioning done and system left in good working condition.", 20, yPos + 10, { maxWidth: 180 });
     doc.setFont("helvetica", "normal");
-    doc.text("Technician's Name and Signature: ..........................................................", 20, yPos + 18);
-    doc.text("Client's Name and Signature: ...............................................................", 20, yPos + 25);
+    doc.text("Technician's Name and Signature: ..........................................................", 20, yPos + 17.5);
+    doc.setFont("helvetica", "bold");
+    doc.text("Confirmed by client representative.", 20, yPos + 25, { maxWidth: 180 });
+    doc.setFont("helvetica", "normal");
+    doc.text("Client's Name and Signature: ...............................................................", 20, yPos + 32.5);
 
     
             // Saving the PDF
