--- a/createinvoice.html
+++ b/createinvoice.html
@@ -325,7 +325,7 @@
 
             yPos += 8;
             doc.setTextColor(128, 128, 128);
-            doc.text(`VAT:`, 56, yPos + 6.5);
+            doc.text(`TOTAL VAT:`, 56, yPos + 6.5);
             doc.setTextColor(0, 0, 0);
             doc.text(`${totalVAT.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`, 87, yPos + 6.5);
 
