--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
     <nav>
     
         <a href="./">HOME</a>
-        <a href="viewcard.html">JOB CARDS</a>
-        <a href="viewnote.html">DELIVERY NOTES</a>
-        <a href="viewinvoice.html">INVOICES</a>
+        <a href="viewcard.php">JOB CARDS</a>
+        <a href="viewnote.php">DELIVERY NOTES</a>
+        <a href="viewinvoice.php">INVOICES</a>
         <div class="search-container">
             <input type="text" placeholder="Search..." id="search">
             <button type="submit">🔍</button>
@@ -28,15 +28,15 @@
     <div class="container">
         <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>JOB CARDS:</strong> Keep track of work progress, assigned tasks, and project timelines efficiently.</p>
-            <a href="createcard.html" class="button"  style="font-weight: bolder;">+ Create</a>
+            <a href="createcard.php" class="button"  style="font-weight: bolder;">+ Create</a>
         </div>
         <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>DELIVERY NOTES:</strong> Document all goods delivered to clients with accurate details and timestamps.</p>
-            <a href="createnote.html" class="button" style="font-weight: bolder;">+ Create</a>
+            <a href="createnote.php" class="button" style="font-weight: bolder;">+ Create</a>
         </div>
         <div class="box" style="background-image: url('images/img13.\ Vector_');">
             <p><strong>INVOICES:</strong> Generate detailed invoices with itemized billing and payment tracking.</p>
-            <a href="createinvoice.html" class="button"  style="font-weight: bolder;">+ Create </a>
+            <a href="createinvoice.php" class="button"  style="font-weight: bolder;">+ Create </a>
         </div>
     </div>
     <footer>
